--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
       # Install mlflow
       - name: Install dependencies
         run: |
-          python -m pip install --uprgrade pip
+          python -m pip install --upgrade pip
           pip install mlflow
 
       # Run as a mlflow project
